--- a/Atfit/bin/Atfit.dll.config
+++ b/Atfit/bin/Atfit.dll.config
@@ -5,12 +5,24 @@
   -->
 <configuration>
   <configSections>
+    <section name="settings" type="System.Configuration.NameValueSectionHandler" allowDefinition="MachineToApplication" restartOnExternalChanges="true" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Atfit-20140621161226;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Atfit-20140621161226.mdf" />
   </connectionStrings>
+  <settings configSource="Config\Settings.config" />
+  <system.net>
+    <mailSettings>
+      <smtp configSource="Config\EmailSettings.config" />
+    </mailSettings>
+    <defaultProxy enabled="true" />
+    <settings>
+      <!-- This setting causes .NET to check certificate revocation lists (CRL) before trusting HTTPS certificates.  But this setting tends to not be allowed in shared hosting environments. -->
+      <!--<servicePointManager checkCertificateRevocationList="true"/>-->
+    </settings>
+  </system.net>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
